--- a/sched.html
+++ b/sched.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="background: #fff5ee">
 <head>
-  <title>Welcome|Index</title>
+  <title>Schedule|Index</title>
   <style>
     body {
       font-family: Arial, sans-serif;
