--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ textarea {
         </div>
  
         <li class="nav-item">
-          <a class="nav-link" href="https://vm5.github.io/THEGRETESTS/"><i class="far fa-copy"></i>Home</a>
+          <a class="nav-link" href="https://main--gretests.netlify.app/"><i class="far fa-copy"></i>Home</a>
         </li>
 
       </ul>
