--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ textarea {
 	<h4>Important Dates#: Integrated Admissions through GRE (2024-25)</h4>
          <table border="1" cellpadding="5" style="border-collapse: collapse;">
   <tr>
-    <td style="background-color: #f2f2f2; font-weight: bold;">7th July, 2024</td>
+    <td style="background-color: #f2f2f2; font-weight: bold;">22nd June, 2024</td>
     <td>Commencement of registrations</td>
   </tr>
   <tr>
